[gd_scene load_steps=4 format=3 uid="uid://da2gmhsba1t5a"]

[ext_resource type="FontFile" uid="uid://c61jh50ymuf6u" path="res://assets/Fonts/FangZhengFangSong-GBK-1.ttf" id="1_5mkxh"]
[ext_resource type="Script" uid="uid://c47behurqhrgc" path="res://Scripts/Main/start_screen.gd" id="1_giqj4"]

[sub_resource type="LabelSettings" id="LabelSettings_5mkxh"]
font = ExtResource("1_5mkxh")
font_size = 42
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.478431)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_giqj4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="text1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -190.0
offset_right = 500.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
text = "周围一片空茫"
label_settings = SubResource("LabelSettings_5mkxh")
horizontal_alignment = 1

[node name="text2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -90.0
offset_right = 500.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "你逐渐醒来......"
label_settings = SubResource("LabelSettings_5mkxh")
horizontal_alignment = 1

[node name="text3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
text = "这里......是哪？"
label_settings = SubResource("LabelSettings_5mkxh")
horizontal_alignment = 1
